# streamlit_ai_practice

./: README.md
svm_streamlist_test/: pyproject.toml
svm_streamlist_test/notebooks/: SVM_inmovilla.ipynb
svm_streamlist_test/notebooks/datasets/: listado.csv
svm_streamlist_test/notebooks/models/: se_vende.pck
svm_streamlist_test/svm_streamlist_test/: predict_venta_service.py  web_app.py  web_app_google_bard.py
