[tool.poetry]
name = "svm-streamlist-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "svm_streamlist_test"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
numpy = "^1.25.2"
streamlit = "^1.26.0"
pandas = "^2.1.0"
ipykernel = "^6.25.2"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
